# IDA-Bench

./: .gitattributes  .gitignore  LICENSE  README.md  benchmark_manager_example.py  copy_and_download.py  copy_notebook_and_download_dataset.py  create_benchmark_data.ipynb  create_benchmark_data.py  evaluate.py  evaluate_run_results.ipynb  evaluate_run_results_tianyu.ipynb  examples.py  insight_retriever.ipynb  interpreter_config_agent.toml  kaggle_crawler_example.py  llm_config_sample.toml  llm_interact.py  llm_interact_env.py  llm_interact_env_run_task.ipynb  llm_interact_tau_bench.ipynb  llm_interact_tau_bench_debug.py  llm_interact_tau_bench_debug_2.py  llm_interact_tau_bench_debug_3.py  llm_interact_tau_bench_debug_4.py  llm_interact_tau_bench_debug_5.py  llm_interactor_example.ipynb  logger.py  operate_preprocessor.ipynb  pyproject.toml  run_benchmark.md  run_benchmark.py  run_preprocessor.py  runner.py  runner_doc.md  sample_agent_config.toml  sample_base_config.toml  sample_interpreter_config.toml  sample_llm_config.toml  sample_llm_config_user.toml  (+6 more)
backend/: __init__.py  backend_interpreter.py  backend_litellm.py  utils.py
configs/: sample_agent_config.toml  sample_base_config_default.toml  sample_base_config_shards.toml  sample_construct_config_retriever.toml  sample_construct_config_shards.toml  sample_interpreter_config.toml
crawler/: code_info_extractor.py  crawler_base.py  example.ipynb  filter.py  kaggle_crawler.py  kaggle_crawler_doc.md  kaggle_info.py  logger.py  nature_crawler.py  notebook_handler.py  paper_format.md  test2.ipynb  utils.py
data_manager/: __init__.py  benchmark_manager.py  dataset_manager.py  doc.md  kaggle_info.py  meta_info.py  notebook_manager.py  utils.py
evaluations/: __init__.py  evaluator.py
examples/: README.md  benchmark_manager_example.py  operate_preprocessor_example.ipynb  scoring_example.py
interpreter/: __init__.py
interpreter/core/: core.py  respond.py
interpreter/core/computer/terminal/languages/: jupyter_language.py
interpreter/core/llm/: llm.py  run_text_llm.py
llm_interact/: example.py  sample_config.toml
llms/: __init__.py  base_agent.py  gatekeeper.py  llm_interact.py  retriever.py  shard_user.py  user.py  user2.py
notebook_instructions/: titanickaggle-ds_full_response.md  walmart-sales-forecasting_full_response.md
preprocessing_notebook/: doc.md  preprocess_config.toml  preprocess_manager.py
preprocessing_notebook/llm_caller/: extract_instructions.py  minimize_nb.py  notebook_narration.py  reconstruct.py
preprocessing_notebook/min_nb/: titanickaggle-ds.py  walmart-sales-forecasting.py
preprocessing_notebook/processed_data/full_nb_md/: titanickaggle-ds.md  walmart-sales-forecasting.md
preprocessing_notebook/processed_data/minimized_nb_md/mini-titanickaggle-ds/: full-response.md  titanickaggle-ds.md
preprocessing_notebook/processed_data/minimized_nb_md/mini-walmart-sales-forecasting/: full-response.md  walmart-sales-forecasting.md
preprocessing_notebook/prompts/: extract_instructions.md  minimize_nb.md  minimize_nb_selfEval.md  minimize_nb_toSubmit.md  notebook_narration.md  reconstruct.md  simplify_nb_level1.md
preprocessing_notebook/utils/: copy_dict_items.py  copy_directory.py  md2py.py  nb2md.py  parse_response.py  reconstruct_dataset.py  run_eval.py  run_py_nb.py  set_data_dir.py  split_dataset.py
sandbox/: Dockerfile  prepare_docker.sh  pyproject.toml  runner.py  sandbox_run.py
scoring/: samplings.py  scoring_base.py  scorings.py
scraper/: example.ipynb  scientific_scraper.py
scripts/: README.md  copy_notebook_and_download_dataset.py  create_benchmark_data.py  evaluate_run_results.ipynb  filter.py  formatter.py  insight_retriever_batch.py  shards_retriever_batch.py  trajactory_to_markdown.py
test_data/: dataset_description.txt
utils/: converter.py  filter.py  formatter.py  readme.md  trajactory_to_markdown.py  trajactory_to_markdown_new.py
