[project]
name = "datascibench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "beautifulsoup4",
    "open-interpreter>=0.4.3",
    "semgrep>=1.119.0",
    "litellm>=1.67.0.post1",
    "kagglehub>=0.3.12",
    "kaggle>=1.7.4.2",
    "dateparser>=1.2.1",
    "playwright>=1.51.0",
]

[dependency-groups]
dev = ["jupyter", "ipykernel", "pytest", "pytest-cov", "ruff"]

[tool.pytest.ini_options]
pythonpath = ".."
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-vv --capture=sys"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "C901"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff.analyze]
exclude = ["archived"]
