[project]
name = "datascibench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy==1.26.4",
    "matplotlib",
    "beautifulsoup4",
    "open-interpreter>=0.4.3",
    "semgrep>=1.119.0",
    "litellm>=1.67.0.post1",
    "kagglehub>=0.3.12",
    "kaggle>=1.7.4.2",
    "dateparser>=1.2.1",
    "playwright>=1.51.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "nbconvert>=7.16.6",
    "scikit-learn>=1.6.1",
    "docker>=7.1.0",
    "ipynbname>=2024.1.0.0",
    "xgboost>=3.0.0",
    "lightgbm>=4.6.0",
    "yellowbrick>=1.5",
    "ppscore>=1.1.0",
    "contractions>=0.1.73",
    "textstat>=0.7.5",
    "nltk>=3.9.1",
    "textblob>=0.19.0",
    "spacy>=3.8.5",
    "imblearn>=0.0",
    "geopy>=2.4.1",
]

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
    "pytest-cov",
    "ruff",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ".."
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-vv --capture=sys"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "C901"]

[tool.ruff.analyze]
exclude = ["archived"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
