[project]
name = "datascibench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.2",
    "matplotlib",
    "beautifulsoup4",
    "open-interpreter>=0.4.3",
    "semgrep>=1.119.0",
    "litellm>=1.67.0.post1",
    "kagglehub>=0.3.12",
    "kaggle>=1.7.4.2",
    "dateparser>=1.2.1",
    "playwright>=1.51.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "nbconvert>=7.16.6",
    "scikit-learn==1.5.0",
    "docker>=7.1.0",
    "humanize==4.8.0",
    "funcy==2.0",
    "omegaconf>=2.3.0",
    "black==24.3.0",
    "jsonschema>=4.22.0",
    "openai>=1.69.0",
    "anthropic>=0.20.0",
    "pytest>=8.3.5",
    "requests==2.32.2",
    "rich>=13.5.3",
    "scipy==1.11.4",
    "dataclasses-json>=0.6.4",
    "loguru==0.7.2",
    "shutup>=0.2.0",
    "tqdm==4.66.3",
    "coolname>=2.2.0",
    "igraph>=0.11.3",
    "genson>=1.2.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "torchtext>=0.18.0",
    "lightgbm>=4.6.0",
    "gensim>=4.3.3",
    "scikit-image>=0.25.2",
    "opencv-python>=4.11.0.86",
    "biopython>=1.85",
    "imbalanced-learn>=0.13.0",
    "h5py>=3.13.0",
    "numba>=0.61.2",
    "arrow>=1.3.0",
    "markovify>=0.9.4",
    "imgaug>=0.4.0",
    "scikit-optimize>=0.10.2",
    "plotly>=6.0.1",
    "hyperopt>=0.2.7",
    "bayesian-optimization>=2.0.2",
    "imagecodecs>=2025.3.30",
    "hmmlearn>=0.3.3",
    "bayespy==0.5.1",
    "sklearn-pandas>=2.2.0",
    "tensorpack>=0.11",
    "sentencepiece>=0.2.0",
    "librosa>=0.11.0",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "nbformat>=5.10.4",
    "kornia>=0.8.0",
    "pillow>=11.1.0",
    "pyparsing>=3.2.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "fastai>=2.8.1",
    "gym>=0.26.2",
    "optuna>=4.3.0",
    "transformers>=4.51.3",
    "datasets==2.1.0",
    "torchmetrics>=1.7.1",
    "pytorch-lightning>=2.5.1.post0",
    "sympy>=1.14.0",
    "timm>=1.0.15",
    "torchinfo>=1.8.0",
    "pdf2image>=1.17.0",
    "pypdf>=5.4.0",
    "pyocr>=0.8.5",
    "pyarrow>=20.0.0",
    "xlrd>=2.0.1",
    "backoff>=2.2.1",
    "streamlit==1.40.2",
    "python-dotenv>=1.1.0",
    "ipynbname>=2024.1.0.0",
    "xgboost>=3.0.0",
    "lightgbm>=4.6.0",
    "yellowbrick>=1.5",
    "ppscore>=1.1.0",
    "contractions>=0.1.73",
    "textstat>=0.7.5",
    "nltk>=3.9.1",
    "textblob>=0.19.0",
    "spacy>=3.8.5",
    "imblearn>=0.0",
    "geopy>=2.4.1",
]

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
    "pytest-cov",
    "ruff",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ".."
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-vv --capture=sys"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "C901"]

[tool.ruff.analyze]
exclude = ["archived"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
